--- a/code/PSBlog/Views/User/Register.cshtml
+++ b/code/PSBlog/Views/User/Register.cshtml
@@ -1,24 +1,27 @@
-﻿@model PSBlog.Models.User
+﻿@model PSBlog.ViewModels.RegisterModel
 
 @{
     ViewBag.Title = "Register";
 }
 @Styles.Render("~/Content/LoginStyle.css")
-<h2>Register</h2>
+
 
 @using (Html.BeginForm("Register", "User", FormMethod.Post, new { @class = "form-signin" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     
-    @Html.TextBoxFor(model => model.UserName, new { @class = "form-control", placeholder = "User name" })
-    @Html.ValidationMessageFor(model => model.UserName)
+     <h2 class="form-signin-heading">Register</h2>
+    @Html.TextBoxFor(model => model.User.UserName, new { @class = "form-control", placeholder = "User name" })
+    @Html.ValidationMessageFor(model => model.User.UserName)
 
-    @Html.PasswordFor(model => model.Password, new { @class = "form-control", placeholder = "Password" })
-    @Html.ValidationMessageFor(model => model.Password)
+    @Html.PasswordFor(model => model.User.Password, new { @class = "form-control", placeholder = "Password" })
+    @Html.ValidationMessageFor(model => model.User.Password)
+    
+    @Html.PasswordFor(model => model.PasswordAgain, new { @class = "form-control", placeholder = "Password again" })
+    @Html.ValidationMessageFor(model => model.PasswordAgain)
 
-
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
 
 
 }
