added blog actions, resolved problems with IoC

--- a/code/PSBlog/Views/Shared/_Layout.cshtml
+++ b/code/PSBlog/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@ Home </a></li>
                 }
                 else
                 {
-                    <li id="nav-log-in"><a href=" @Url.Action("Login", "User")"> Log in</a></li>
+                    <li id="nav-log-in"><a href=" @Url.Action("Login", "User") "> <span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
                 }
             </ul>
         </div>
