--- a/code/PSBlog/Views/Shared/_Layout.cshtml
+++ b/code/PSBlog/Views/Shared/_Layout.cshtml
@@ -11,38 +11,42 @@
 
 </head>
 <body>
-
-
     <div class="container">
         <div class="masthead">
             <h3 class="text-muted">PsBlogs</h3>
             <ul class="nav nav-justified">
-                <li id="nav-home"><a href="@Url.Action("Index","Home")"> <span class="glyphicon glyphicon-home"></span>
-Home </a></li>
+                <li id="nav-home">
+                    <a href="@Url.Action("Index","Home")">
+                        <span class="glyphicon glyphicon-home"></span>
+                        Home
+                    </a>
+                </li>
                 <li id="nav-blog-list"><a href="@Url.Action("List", "Blog")"><span class="glyphicon glyphicon-list"></span> Blog list</a></li>
-                
-                @if(User.Identity.IsAuthenticated)
+
+                @if (User.Identity.IsAuthenticated)
                 {
-                    <li id="nav-log-in"><a href=" @Url.Action("Index", "User")"> <span class="glyphicon glyphicon-user"></span> @User.Identity.Name</a></li>
+                    <li id="nav-log-in"><a href=" @Url.Action("Index", "User") "> <span class=" glyphicon glyphicon-user"></span> @User.Identity.Name</a></li>
                 }
                 else
                 {
-                    <li id="nav-log-in"><a href=" @Url.Action("Login", "User") "> <span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
+                    <li id="nav-log-in"><a href=" @Url.Action("Login", "User") "> <span class=" glyphicon glyphicon-log-in"></span> Log in</a></li>
                 }
             </ul>
         </div>
 
-        
+
         @RenderBody()
         <!-- Site footer -->
         <div class="footer">
             <p>&copy; Paweł 'soltys' Sołtysiak 2013</p>
-            <p><a href="http://github.com/soltys"><img height="24" width="24" src="@Url.Content("~/Content/icons/github.png")" alt="github icon" /></a></p>
+            <p>
+                <a href="http://github.com/soltys"><img height="32" width="32" src="@Url.Content("~/Content/icons/github.png")" alt="github icon" /></a>
+                <a href="http://twitter.com/soltys"><img height="32" width="32" src="@Url.Content("~/Content/icons/twitter.png")" alt="twitter icon" /></a>
+                <a href="http://linkedin.com/in/psoltysiak"><img height="32" width="32" src="@Url.Content("~/Content/icons/linkedin.png")" alt="Linked icon" /></a>
+            </p>
         </div>
 
     </div> <!-- /container -->
-
-
     @Scripts.Render("~/bundles/jquery")
     @Styles.Render("~/Scripts/bootstrap.min.js")
     @RenderSection("scripts", required: false)
