Fixed top navigation buttons, set them as active

--- a/code/PSBlog/Views/Blog/Index.cshtml
+++ b/code/PSBlog/Views/Blog/Index.cshtml
@@ -31,3 +31,10 @@
 }
 
 </table>
+@section scripts{
+    <script>
+    $(function(){
+        $("#nav-blog-list").addClass('active');
+    });
+    </script>
+}
