--- a/code/PSBlog/Views/User/Index.cshtml
+++ b/code/PSBlog/Views/User/Index.cshtml
@@ -7,7 +7,9 @@
 
 <p>@Html.ActionLink("Log out", "LogOut")</p>
 
-
+<p>
+    @Html.ActionLink("Create New Blog", "Create","Blog")
+</p>
 @section scripts{
     <script>
         $(function () {
