--- a/code/PSBlog/Views/Shared/_BlogLayout.cshtml
+++ b/code/PSBlog/Views/Shared/_BlogLayout.cshtml
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="masthead">
-            <h3 class="text-muted"><a href="/">PsBlogs</a></h3>
+            <h3 class="text-muted">PsBlogs</h3>
             <ul class="nav nav-justified">
                 <li id="nav-home">
                     <a href="@Url.Action("Index","Home")">
