--- a/code/PSBlog/Views/User/List.cshtml
+++ b/code/PSBlog/Views/User/List.cshtml
@@ -29,8 +29,8 @@
             @Html.DisplayFor(modelItem => item.Password)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Grant admin role", "GrantAdminRole", new { id=item.Id }) 
+            @Html.ActionLink("Take away admin role", "TakeAwayAdminRole", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
