--- a/code/PSBlog/Views/User/Index.cshtml
+++ b/code/PSBlog/Views/User/Index.cshtml
@@ -8,7 +8,7 @@
 <p>@Html.ActionLink("Log out", "LogOut")</p>
 @if(User.IsInRole("admin"))
 {
-    <span>Only for admins</span>
+    @Html.ActionLink("Manage users","List")
 }
 <p>
     @Html.ActionLink("Create New Blog", "Create","Blog")
