finished blog project

--- a/code/PSBlog/Views/Home/Index.cshtml
+++ b/code/PSBlog/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="jumbotron">
     <h1>Welcome sir or madam!</h1>
     <p class="lead">Welcome on web page which was created for "Component-based software engineering" course in Faculty of Computer Science on West Pomeranian University of Technology </p>
-    <p><a class="btn btn-lg btn-success" href="#" role="button">Start with registering new user</a></p>
+    <p><a class="btn btn-lg btn-success" href="/User/Register" role="button">Start with registering new user</a></p>
 </div>
 
 <!-- Example row of columns -->
