added function to delete blogs

--- a/code/PSBlog/Views/Blog/Details.cshtml
+++ b/code/PSBlog/Views/Blog/Details.cshtml
@@ -21,15 +21,15 @@
             <div class="col-md-4">
                 @post.DatePosted
             </div>
-            <div class="col-md-4">
-                <p>
-                    Tags:
-                    @foreach (var tag in post.Tags)
-                    {
-                        <span> @tag.Name</span>
-                    }
-                </p>
-            </div>
+          @*  <div class="col-md-4">
+        <p>
+            Tags:
+            @foreach (var tag in post.Tags)
+            {
+                <span> @tag.Name</span>
+            }
+        </p>
+    </div>*@
         </div>
 
 
