--- a/code/PSBlog/Views/Blog/Details.cshtml
+++ b/code/PSBlog/Views/Blog/Details.cshtml
@@ -39,6 +39,7 @@
 
         @if (User.Identity.IsAuthenticated && Model.Owner.UserName == User.Identity.Name)
         {
+            <a href="@Url.Action("Edit", "Post", new { id = post.Id })" class="btn ">Edit this post</a>
             <a href="@Url.Action("Delete", "Post", new { id = post.Id })" class="btn btn-danger">Remove this post</a>
         }
     </div>
