--- a/code/PSBlog/Content/bootstrap/css/justified-nav.css
+++ b/code/PSBlog/Content/bootstrap/css/justified-nav.css
@@ -3,7 +3,7 @@
 }
 
 .footer {
-  border-top: 1px solid #eee;
+  border-top: 1px solid #777;
   margin-top: 40px;
   padding-top: 40px;
   padding-bottom: 40px;
@@ -22,33 +22,33 @@
 /* Customize the nav-justified links to be fill the entire space of the .navbar */
 
 .nav-justified {
-  background-color: #eee;
+  background-color: #777;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #777;
 }
 .nav-justified > li > a {
   margin-bottom: 0;
   padding-top: 15px;
   padding-bottom: 15px;
-  color: #777;
+  color: #eee;
   font-weight: bold;
   text-align: center;
-  border-bottom: 1px solid #d5d5d5;
-  background-color: #e5e5e5; /* Old browsers */
+  border-bottom: 1px solid #777;
+  background-color: #777; /* Old browsers */
   background-repeat: repeat-x; /* Repeat the gradient */
-  background-image: -moz-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%); /* FF3.6+ */
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#e5e5e5)); /* Chrome,Safari4+ */
-  background-image: -webkit-linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* Chrome 10+,Safari 5.1+ */
-  background-image: -o-linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* Opera 11.10+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-  background-image: linear-gradient(top, #f5f5f5 0%,#e5e5e5 100%); /* W3C */
+  background-image: -moz-linear-gradient(top, #777 0%, #555 100%); /* FF3.6+ */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#777), color-stop(100%,#777)); /* Chrome,Safari4+ */
+  background-image: -webkit-linear-gradient(top, #777 0%,#555 100%); /* Chrome 10+,Safari 5.1+ */
+  background-image: -o-linear-gradient(top, #777 0%,#555 100%); /* Opera 11.10+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#777', endColorstr='#555',GradientType=0 ); /* IE6-9 */
+  background-image: linear-gradient(top, #777 0%,#555 100%); /* W3C */
 }
 .nav-justified > .active > a,
 .nav-justified > .active > a:hover,
 .nav-justified > .active > a:focus {
-  background-color: #ddd;
+  background-color: #777;
   background-image: none;
-  box-shadow: inset 0 3px 7px rgba(0,0,0,.15);
+  box-shadow: inset 0 3px 7px rgba(255,255,255,.15);
 }
 .nav-justified > li:first-child > a {
   border-radius: 5px 5px 0 0;
@@ -63,8 +63,8 @@
     max-height: 52px;
   }
   .nav-justified > li > a {
-    border-left: 1px solid #fff;
-    border-right: 1px solid #d5d5d5;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
   }
   .nav-justified > li:first-child > a {
     border-left: 0;
