--- a/code/PSBlog/Views/Post/Create.cshtml
+++ b/code/PSBlog/Views/Post/Create.cshtml
@@ -7,23 +7,24 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm("Create","Post", FormMethod.Post))
-{   
+@using (Html.BeginForm("Create", "Post", FormMethod.Post))
+{
     <div class="form-horizontal">
         <h4>Post</h4>
         <hr />
         @Html.ValidationSummary(true)
-        @Html.HiddenFor(model => model.Blog.Id);
+        @Html.HiddenFor(model => model.Blog.Id)
         <div class="form-group">
             @Html.LabelFor(model => model.Post.Title, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Post.Title)
+                @Html.TextBoxFor(model => model.Post.Title, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Post.Title)
             </div>
+
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Post.Content, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Post.Content, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.Post.Content, new { @class = "ckeditor" })
                 @Html.ValidationMessageFor(model => model.Post.Content)
@@ -41,11 +42,11 @@
 
 
 @section scripts{
-<script src="/Scripts/ckeditor/ckeditor.js"></script>
-<script src="/Scripts/ckeditor/adapters/jquery.js"></script>
+    <script src="/Scripts/ckeditor/ckeditor.js"></script>
+    <script src="/Scripts/ckeditor/adapters/jquery.js"></script>
     <script>
-    $(function () {
-$('.ckeditor').ckeditor();
-    })
+        $(function () {
+            $('.ckeditor').ckeditor();
+        })
     </script>
 }
